welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value c
    case 1 => c = Color.YELLOW
              ^MethodsPicture:26: error: not found: value c
    case 2 => c = Color.RED
              ^MethodsPicture:27: error: not found: value c
    case 3 => c = Color.BLUE
              ^MethodsPicture:28: error: not found: value c
    case 4 => c = Color.GREEN
              ^MethodsPicture:32: error: not found: value c
  faireV(c)
         ^